# University

./: .gitignore  Sort.cpp  Sort.h  Student.cpp  Student.h  main.cpp  studentProgram  Отчёт.docx
Semester2/physic/practical/IDZ1/: .clangd  .gitignore  CMakeLists.txt
Semester2/physic/practical/IDZ1/include/: Electrodes.h  FieldLine.h  PotentialSolver.h  Utils.h
Semester2/physic/practical/IDZ1/report/: IDZ1_Nikolaev.tex
Semester2/physic/practical/IDZ1/scripts/: plot.py
Semester2/physic/practical/IDZ1/src/: Electrodes.cpp  FieldLine.cpp  PotentialSolver.cpp  Utils.cpp  main.cpp
k1/s2/physic/practical/IDZ2/: CMakeLists.txt  IDZ2.txt
k1/s2/physic/practical/IDZ2/report/: IDZ2_Nikolaev.tex
k1/s2/physic/practical/IDZ2/report/sections/: conclusion.tex  implementation.tex  introduction.tex  results.tex  theory.tex
k1/s2/physic/practical/IDZ2/scripts/: plot.py
k1/s2/physic/practical/IDZ2/src/: calc.cpp  main.cpp
k1/s2/proga/itog/: .gitignore  CMakeLists.txt  MakeFile
k1/s2/proga/itog/files/: in  log.txt
k1/s2/proga/itog/include/core/: Window.h  WindowManager.h
k1/s2/proga/itog/include/elements/: DisplayElement.h  Pixel.h
k1/s2/proga/itog/lib/: Header.hpp
k1/s2/proga/itog/lib/List/: Clear.cpp  IsEmpty.cpp  List.hpp  PushBack.cpp
k1/s2/proga/itog/lib/Number/: Clear.cpp  DeleteLeftZeroes.cpp  MultiplyByDigit.cpp  Number.hpp  Operator.cpp  ShiftRight.cpp
k1/s2/proga/itog/lib/String/: Clear.cpp  String.hpp  ToChar.cpp  ToInt.cpp
k1/s2/proga/itog/lib/UserInterface/: InputNumber.cpp  PrintList.cpp  UserInterface.hpp
k1/s2/proga/itog/src/: Main.cpp  main.cpp
k1/s2/proga/itog/src/core/: Window.cpp  WindowManager.cpp
k1/s2/proga/itog/src/elements/: DisplayElement.cpp  Pixel.cpp
k1/s2/proga/itog/src/labs/: Lab1.cpp
lab1/report/: ~$Отчёт.docx  (+1 more)
(+1313 files in other folders)
